# FFmpeg

./: .gitignore
app/: build.gradle
app/src/androidTest/java/com/dntutty/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  GHSFFmpeg.cpp  GHSFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  marco.h  native-lib.cpp  safe_queue.cpp  safe_queue.h
app/src/main/java/com/dntutty/ffmpeg/: GHSPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/dntutty/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
